[package]

name = "libxm"
version = "1.1.0"
authors = ["Danny Spencer <dan.spencer.np@gmail.com>"]
description = "A binding of libxm for Rust. A small XM (FastTracker II Extended Module) player library. Designed for easy integration in demos and such, and provides timing functions for easy sync against specific instruments, samples or channels."
repository = "https://github.com/nukep/libxm-rs"
documentation = "https://nukep.github.io/libxm-rs/libxm"
readme = "README.md"
keywords = ["xm", "libxm", "FastTracker"]
license = "WTFPL"
links = "xm"
build = "build.rs"
edition = "2021"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
cpal = "0.15.3"
getopts = "0.2"
sdl2 = "0.37.0"
